# PTOPTW

./: .gitignore  AMTOPTW_algorithm.cpp  AMTOPTW_algorithm.h  CMakeLists.txt  Combined.docx  Controller.cpp  Definitions.cpp  Divide.cpp  Divider.cpp  Dockerfile  Documentation.docx  Graphics.cpp  ILS.cpp  IteratedLocalSearch.cpp  LICENSE  OP.cpp  Processor.cpp  README.md  Solution.cpp  TODO.md  TaskManager.cpp  Unifier.cpp  main.cpp  plotting.ipynb  run.sh  run_all.sh  run_all_cases.sh  run_cases.sh
.ipynb_checkpoints/: plotting-checkpoint.ipynb
docs/: Combined.docx  Documentation.docx
include/: Controller.h  Custom.h  Definitions.h  Divide.h  Divider.h  Graphics.h  ILS.h  IteratedLocalSearch.h  IteratorList.h  List.h  OP.h  Processor.h  Solution.h  TSP.h  TaskManager.h  Unifier.h
src/: Graphics.cpp  ILS.cpp  OP.cpp  Solution.cpp  main.cpp
topology/: README.md  athens_box.geojson  create.js  package.json
topology/pois/: ArtLife.csv  Beaches.csv  Casino.csv  GreekFood.csv  IKEA.csv  McDonalds.csv  Monasteries.csv  Museums.csv  Public.csv  SightSeeings.csv  TGI Fridays.csv  Theaters.csv
topology/pois_old/: Hondos Center.csv  Museums.csv
topology/static/: index.css  index.html  index.js  server.py
viz/topology/: AthensTopology.txt  README.md
viz/topology/pois/: ArtLife.csv  GreekFood.csv  Luna_Park.csv  SPA.csv  ShoppingCenters.csv  VillageCinemas.csv
viz/topology/pois_old/: Starbucks.csv
viz/topology/static/: index.html
